[package]
name = "binominal_tree_model"
version = "0.1.0"
edition = "2024"

[lib]
bench = false

[[bench]]
name = "bench"
harness = false

[dependencies]
const_for = "0.1.5"
criterion = { version = "0.5.1", features = ["html_reports"] }
hashbrown = { version = "0.15.2", features = ["rayon"] }
itertools = "0.14.0"
#rayon = "1.10.0"
#seq-macro = "0.3.6"
binomial-tree-macro = { path = "macros" }
typed-arena = "2.0.2"
#phf = { version = "0.11.3", features = ["macros", "phf_macros"] }
#pulp = "0.21.4"

[profile.release-with-debug]
inherits = "release"
debug = true
