[package]
name = "binominal_tree_model"
version = "0.1.0"
edition = "2024"

[lib]
bench = false

[dependencies]
const_for = "0.1.5"
criterion = { version = "0.5.1", features = ["html_reports"] }
hashbrown = { version = "0.15.2", features = ["rayon"] }
itertools = "0.14.0"
binomial_tree_macro = { path = "macros" }
rayon = "1.10.0"
id-arena = "2.2.1"
statrs = "0.18.0"

[profile.release-with-debug]
inherits = "release"
debug = true

[[bench]]
name = "static_binomial_tree"
harness = false

[[bench]]
name = "black_scholes"
harness = false